--- a/style.css
+++ b/style.css
@@ -311,9 +311,19 @@ main {
 /* ----------Media Query Ends ------------ */
 
 .attribution {
-  font-size: 11px;
+  font-size: 13px;
   text-align: center;
+  background-color: hsl(180, 29%, 50%);
+  padding: 0.5rem;
+  letter-spacing: 2px;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: white;
+  text-decoration: none;
+  font-size: 0.8rem;
+  transition: all 0.3s ease;
+}
+
+.attribution a:hover {
+  border-bottom: 2px solid rgb(30, 29, 29);
 }
