--- a/style.css
+++ b/style.css
@@ -118,6 +118,10 @@ main {
   box-shadow: 0px 1px 6px 2px hsla(180, 29%, 50%, 0.393);
 }
 
+.featured {
+  border-left: 6px solid hsl(180, 29%, 50%);
+}
+
 .job-details {
   display: flex;
   align-items: center;
